Parallax scrolling enabled on mobiles

--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
 		}
 
 		/* Turn off parallax scrolling for tablets and phones */
-		@media only screen and (max-device-width: 1024px) 
+		/*@media only screen and (max-device-width: 1024px) 
 		{
 		    .bgimg-1, .bgimg-2, .bgimg-3 
 		    {
 		        background-attachment: scroll;
 		    }
 		}
+		*/
 		.progress{
 			width: 150px;
 			height: 150px;
