Resume will now open in new tab

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 
 	<div class="bgimg-1">
 	  <div class="caption" style="top: 20%;">
-		  <span class="border">Contact me @</span>   <span><a style="color: darkslateblue; font-size: 30px; "  href="resume.pdf">  Check Out my Resume! </a> </span>
+		  <span class="border">Contact me @</span>   <span><a style="color: darkslateblue; font-size: 30px; "  href="resume.pdf" target="_blank">  Check Out my Resume! </a> </span>
 	    <div class="topStack"></div>
 	    <div class="container-fluid">
 		 	<div class="row contacts">
