Removed Full Stack Dev

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 	<div class="bgimg-4">
 	  	<div class="caption" style="top: 15%; " >
 			<img src="name.png" class="border">
-	    	<p style="margin-top: 5vh; font-size: 18px; color: lightgray;">Full Stack Developer.TechPreneur.Cloud Evangelist</p>
+	    	<p style="margin-top: 5vh; font-size: 18px; color: lightgray;">Aspiring Cloud Developer</p>
 	  	</div>
 	</div>
 
