--- a/index.html
+++ b/index.html
@@ -324,10 +324,8 @@
 
 	<div style= "color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;  " >
 	  	<h3 style="text-align:center;">Jack of All Trades..Yep why the heck not?</h3>
-
-	  	<p>I started my college by being a complete beginner to coding. Time flies, and well... I still might not have become a prodigy yet but I have developed what could hopefully make me a better programmer: a <strong>love</strong> for it.</p>
-
-		<h5 style="text-align: left;"> Skills:</h5>
+		<p>"Transforming complex business challenges into innovative technological solutions, I leverage my expertise as a CS engineer to drive strategic problem-solving and propel businesses towards success."</p>
+		<h5 style="text-align: left;">Technical Skills:</h5>
 	  	<br>
 		<div class="container">
 			<div class="row">
@@ -339,7 +337,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">C</div>
+						<div class="progress-value">PYTHON</div>
 					</div>
 				</div>
 
@@ -351,7 +349,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">C++</div>
+						<div class="progress-value">C</div>
 					</div>
 				</div>
 			</div>
@@ -378,7 +376,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">Python</div>
+						<div class="progress-value">C++</div>
 					</div>
 				</div>
 			</div>
@@ -394,7 +392,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">Android</div>
+						<div class="progress-value">AWS</div>
 					</div>
 				</div>
 
@@ -406,7 +404,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">AWS</div>
+						<div class="progress-value">Android</div>
 					</div>
 				</div>
 			</div>
@@ -424,8 +422,8 @@
 
 	<div style="position:relative;">
 	  	<div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-		    <p>"You miss 100 percent of the shots you never take"</p>
-		    <p>-Wayne Gretzky</p>
+		    <p>"What we know is a drop, what we don't know is an ocean"</p>
+		    <p>Learning Never Stops!!</p>
 		    <br>
 			<h5 style="font-family: sans-serif">Check out my projects!</h5>
 
@@ -465,31 +463,25 @@
 	</div>
 	<div class="bgimg-3">
 	  <div class="caption">
-	    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">TALE OF A COLLEGE STUDENT</span>
+	    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">TALE OF A TECH GUY</span>
 	  </div>
 	</div>
 
 	<div style="position:relative;">
 		<div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-			<p>I Study computer science @ NIIT University.One day i would like to make it big in the field of Cloud Computing and virtualization. More fields that make me ecstatic are Machine Learning,Data Science and Ethical hacking.I’ve got that enthusiasm for a start-up.Also,I am really passionate about cricket and writing novels.</p>
+			<p>Currently studying computer science and management modules at the University of St Andrews, Scotland (#1 in The Guardian UK National University Rankings 2023). I was previously working at IBM and Kyndryl for close to 2 years and my daily activities involved migrating mission-critical infrastructure systems to multi-cloud environments and I was learning my way around Digital Transformation. Always on a constant journey to learn cutting-edge technologies like Kubernetes, Openshift, and software development. My research interests include Quantum Computing, High-Performance Computing, and Blockchain. I Studied Computer Science @ NIIT University. One day I would like to make it big in Cloud computing and Virtualization. More fields that make me ecstatic are Machine Learning, AI, and Ethical Hacking. I’ve got that enthusiasm for a start-up. Also,I am really passionate about cricket and writing novels.</p>
 		</div>
 	</div>
 
 	<div class="bgimg-1">
 	  <div class="caption" style="top: 20%;">
-		  <span class="border">Contact me @</span>   <span><a style="color: darkslateblue; font-size: 30px; "  href="Ajay SharmaGhattamaraju_InternshalaResume.pdf	
-" target="_blank">  Check Out my Resume! </a> </span>
+		  <span class="border">Contact me @</span>   <span><a style="color: darkslateblue; font-size: 30px; "  href="AjaySharma.pdf" target="_blank">  Check Out my Resume! </a> </span>
 	    <div class="topStack"></div>
 	    <div class="container-fluid">
 		 	<div class="row contacts">
 		 		<div class="col-sm-3 social_links">
 		 			<a href="https://www.facebook.com/profile.php?id=100011359739804">
 		 				<img src="facebook_logo.png" class="imgResize">
-		 			</a>
-		 		</div>
-		 		<div class="col-sm-3 social_links">
-		 			<a href="https://twitter.com/AjaySha24223163">
-		 				<img src="twitter_logo.png" class="imgResize">
 		 			</a>
 		 		</div>
 		 		<div class="col-sm-3 social_links">
