--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 	<div class="bgimg-4">
 	  	<div class="caption" style="top: 15%; " >
 			<img src="name.png" class="border">
-	    	<p style="margin-top: 5vh; font-size: 18px; color: lightgray;">Aspiring Cloud Developer</p>
+	    	<p style="margin-top: 5vh; font-size: 18px; color: lightgray;">Cloud Developer</p>
 	  	</div>
 	</div>
 
@@ -337,7 +337,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">PYTHON</div>
+						<div class="progress-value">Python</div>
 					</div>
 				</div>
 
@@ -364,7 +364,7 @@
 						<span class="progress-right">
                     <span class="progress-bar"></span>
                 </span>
-						<div class="progress-value">JAVA</div>
+						<div class="progress-value">Java</div>
 					</div>
 				</div>
 
@@ -445,7 +445,7 @@
 			<div class="grid-elements add-shadow">
 				<img src="catero.PNG" alt="work image 3" class="fwork-img responsive-img">
 				<h3 class="fwork-header hdr-text">Catero Website</h3>
-				<p class="fwork-link p-text"><a href="https://github.com/codehawkdevs/udacity-TicTacToe" target="_blank"><img src="vog.png" alt="git button" class="git-button"></a></p>
+				<p class="fwork-link p-text"><a href="https://github.com/Ashish0809/Catero" target="_blank"><img src="vog.png" alt="git button" class="git-button"></a></p>
 			</div>
 			<div class="grid-elements add-shadow">
 				<img src="voila.PNG" alt="work image 3" class="fwork-img responsive-img">
@@ -479,11 +479,7 @@
 	    <div class="topStack"></div>
 	    <div class="container-fluid">
 		 	<div class="row contacts">
-		 		<div class="col-sm-3 social_links">
-		 			<a href="https://www.facebook.com/profile.php?id=100011359739804">
-		 				<img src="facebook_logo.png" class="imgResize">
-		 			</a>
-		 		</div>
+		 		
 		 		<div class="col-sm-3 social_links">
 		 			<a href="https://github.com/imajay777">
 		 				<img src="github_logo.png" class="imgResize">
