Update Social media info

--- a/index.html
+++ b/index.html
@@ -486,8 +486,13 @@
 		 			</a>
 		 		</div>
 		 		<div class="col-sm-3 social_links">
-		 			<a href="https://www.instagram.com/iamajay77/">
+		 			<a href="https://www.instagram.com/captainchill77/">
 		 				<img src="instagram_logo.png" class="imgResize">
+		 			</a>
+		 		</div>
+				<div class="col-sm-3 social_links">
+		 			<a href="https://www.linkedin.com/in/ajaysharmags/">
+		 				<img src="LinkedIn.png" class="imgResize">
 		 			</a>
 		 		</div>
 		 	</div>
